--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
         <div class="square">
-            <button></button>
-            <button></button>
-            <button></button>
+            <button class="tl"></button>
+            <button class="tc"></button>
+            <button class="tr"></button>
 
-            <button></button>
-            <button></button>
-            <button></button>
+            <button class="ml"></button>
+            <button class="mc"></button>
+            <button class="mr"></button>
 
-            <button></button>
-            <button></button>
-            <button></button>
+            <button class="bl"></button>
+            <button class="bc"></button>
+            <button class="br"></button>
         </div>
 </body>
 </html>
